--- a/app/src/main/res/layout/activity_registry.xml
+++ b/app/src/main/res/layout/activity_registry.xml
@@ -22,14 +22,18 @@
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_round"
         android:backgroundTint="@color/colorPrimary"
-        android:ems="10"
+        android:drawableLeft="@android:drawable/sym_action_email"
         android:hint="@string/email"
         android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        android:textColor="#FFFF"
+        android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -40,14 +44,18 @@
     <EditText
         android:id="@+id/editTextPassword"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_round"
         android:backgroundTint="@color/colorPrimary"
-        android:ems="10"
+        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
         android:hint="@string/password"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:textColor="#FFFF"
+        android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -58,14 +66,18 @@
     <EditText
         android:id="@+id/editTextPassword2"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
         android:layout_marginStart="32dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:background="@drawable/edit_text_round"
         android:backgroundTint="@color/colorPrimary"
-        android:ems="10"
+        android:drawableLeft="@android:drawable/ic_lock_idle_lock"
         android:hint="@string/password2"
         android:inputType="textPassword"
+        android:paddingLeft="10dp"
+        android:textColor="#FFFF"
+        android:textColorHint="#FFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -82,6 +94,7 @@
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_round"
         android:text="@string/login"
+        android:onClick="logIn"
         android:textColor="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -96,8 +109,8 @@
         android:layout_height="wrap_content"
         android:text="Las constraseñas no coinciden"
         android:textColor="#8F160D"
-        android:visibility="invisible"
         android:textSize="18sp"
+        android:visibility="invisible"
         app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
