--- a/app/src/main/res/layout/activity_edit_text.xml
+++ b/app/src/main/res/layout/activity_edit_text.xml
@@ -15,6 +15,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@drawable/button_floating"
+        android:onClick="confirmNote"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_check"
@@ -33,6 +34,7 @@
         tools:ignore="VectorDrawableCompat" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout"
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
@@ -99,5 +101,14 @@
                 android:visibility="invisible" />
         </LinearLayout>
     </RelativeLayout>
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="67dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
