--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,6 +15,7 @@
         android:text="+"
         android:textColor="#FFFFFF"
         android:textSize="36sp"
+        android:onClick="addNote"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.904"
@@ -62,6 +63,7 @@
         app:srcCompat="@android:drawable/ic_menu_sort_alphabetically" />
 
     <RelativeLayout
+        android:id="@+id/relativeLayout2"
         android:layout_width="350dp"
         android:layout_height="match_parent"
         android:layout_marginStart="24dp"
