--- a/app/src/main/res/menu/menu_edit_text.xml
+++ b/app/src/main/res/menu/menu_edit_text.xml
@@ -3,13 +3,13 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/item2"
+        android:id="@+id/item_clip"
         android:icon="@drawable/ic_attach"
         android:title="Adjuntar"
         app:showAsAction="ifRoom" />
 
     <item
-        android:id="@+id/item1"
+        android:id="@+id/item_share"
         android:icon="@drawable/ic_share"
         android:title="Compartir"
         app:showAsAction="ifRoom" />
