--- a/app/src/main/res/layout/preference_password.xml
+++ b/app/src/main/res/layout/preference_password.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Contraseña"
+        android:key="text_password"
         android:backgroundTint="@color/colorAccent"
         android:inputType="textPassword"
         android:paddingLeft="10dp"
