--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -1,40 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <SwitchPreference
-        android:defaultValue="false"
-        android:key="switch_dark_theme"
-        android:title="Tema Oscuro" />
+    <PreferenceCategory android:title="General">
 
-    <CheckBoxPreference
-        android:defaultValue="true"
-        android:key="pref_sync"
-        android:summary="@string/sync_pref_summary"
-        android:title="@string/sync_pref" />
+        <SwitchPreference
+            android:defaultValue="false"
+            android:key="switch_dark_theme"
+            android:title="Tema Oscuro" />
 
-    <ListPreference
-        android:defaultValue="@string/pref_syncConnectionType_default_value"
-        android:dependency="pref_sync"
-        android:entries="@array/pref_syncConnectionType_entries"
-        android:entryValues="@array/pref_syncConnectionType_values"
-        android:key="pref_sync_connection_type"
-        android:summary="@string/pref_syncConnectionType_summary"
-        android:title="@string/pref_syncConnectionType" />
+        <CheckBoxPreference
+            android:defaultValue="true"
+            android:key="pref_sync"
+            android:summary="@string/sync_pref_summary"
+            android:title="@string/sync_pref" />
 
-    <EditTextPreference
-        android:dialogLayout="@layout/preference_reset_notes"
-        android:dialogTitle=""
-        android:key="text_reset_notes"
-        android:summary="Se restablecerán las notas de la última copia de seguridad"
-        android:title="Restablecer Notas" />
+        <ListPreference
+            android:defaultValue="@string/pref_syncConnectionType_default_value"
+            android:dependency="pref_sync"
+            android:entries="@array/pref_syncConnectionType_entries"
+            android:entryValues="@array/pref_syncConnectionType_values"
+            android:key="pref_sync_connection_type"
+            android:summary="@string/pref_syncConnectionType_summary"
+            android:title="@string/pref_syncConnectionType" />
 
-    <EditTextPreference
-        android:dialogLayout="@layout/preference_password"
-        android:dialogTitle="Restablecer la contraseña"
-        android:inputType="textPassword"
-        android:key="text_password"
-        android:summary="Se restablecerá la contraseña de la cuenta"
-        android:title="Cambiar la Contraseña" />
+        <Preference
+            android:key="text_reset_notes"
+            android:summary="Se restablecerán las notas de la última copia de seguridad"
+            android:title="Restablecer Notas" />
 
+        <PreferenceScreen
+            android:key="pref_password"
+            android:summary="Se restablecerá la contraseña de la cuenta"
+            android:title="Cambiar la Contraseña">
+            <intent
+                android:action="android.intent.action.VIEW"
+                android:targetClass="com.example.projectnotes.activities.RegistryActivity"
+                android:targetPackage="com.example.projectnotes" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
