--- a/app/src/main/res/drawable/edit_text_round.xml
+++ b/app/src/main/res/drawable/edit_text_round.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#FFFF" />
+    <solid android:color="#D5D1D1" />
     <corners android:radius="20dp" />
 
 </shape>
