--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,8 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#6200EE</color>
+    <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorBackground">#FAC834</color>
-    <color name="colorBorder">#DAA403</color>
+    <color name="colorBackground">#FBFBF8</color>
+    <color name="colorBorder">#D5D1D1</color>
 </resources>
+<!--    -->
+<!--    03A9F4-->
+<!--    6200EE-->
