Orden alfabetico mejorado, busqueda mejorada, se ha añadido tipo de vista

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -81,13 +81,13 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-<!--            <ViewStub-->
-<!--                android:id="@+id/stub_list"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:inflatedId="@+id/showlayout"-->
-<!--                android:layout="@layout/my_listview" />-->
+            <ViewStub
+                android:id="@+id/stub_list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:inflatedId="@+id/showlayout"
+                android:layout="@layout/my_listview" />
 
             <ViewStub
                 android:id="@+id/stub_grid"
