--- a/app/src/main/res/layout/my_listview.xml
+++ b/app/src/main/res/layout/my_listview.xml
@@ -7,8 +7,8 @@
         android:id="@+id/listViewNotes"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:cacheColorHint="#00000000"
-        android:divider="@color/colorPrimary"
-        android:dividerHeight="1dp"
+        android:dividerHeight="2dp"
         android:paddingTop="10dp" />
 </FrameLayout>
+<!--    android:divider="@color/colorPrimary"-->
+<!--android:cacheColorHint="#00000000"-->
