--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,7 @@
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
-    <color name="colorBackground">#FBFBF8</color>
+    <color name="colorBackground">#FAFAF6</color>
     <color name="colorBorder">#D5D1D1</color>
 </resources>
 <!--    -->
