--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -4,11 +4,6 @@
 
     <PreferenceCategory android:title="General">
 
-        <SwitchPreference
-            android:defaultValue="false"
-            android:key="switch_dark_theme"
-            android:title="Tema Oscuro" />
-
         <ListPreference
             android:defaultValue="Lista"
             android:entries="@array/pref_views_notes_entries"
@@ -41,10 +36,10 @@
             android:key="pref_password"
             android:summary="Se restablecerá la contraseña de la cuenta"
             android:title="Cambiar Contraseña">
-            <intent
-                android:action="android.intent.action.VIEW"
-                android:targetClass="com.example.projectnotes.activities.RegistryActivity"
-                android:targetPackage="com.example.projectnotes" />
+<!--            <intent-->
+<!--                android:action="android.intent.action.VIEW"-->
+<!--                android:targetClass="com.example.projectnotes.activities.RegistryActivity"-->
+<!--                android:targetPackage="com.example.projectnotes" />-->
         </PreferenceScreen>
 
     </PreferenceCategory>
