--- a/app/src/main/res/drawable/button_round_border.xml
+++ b/app/src/main/res/drawable/button_round_border.xml
@@ -2,5 +2,5 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <corners android:radius="16dp" />
     <stroke android:width="2dp"
-        android:color="@color/colorAccent"/>
+        android:color="@color/colorPrimary"/>
 </shape>
