Implementación de la copia de seguridad y restauracion.

--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,37 +2,23 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <PreferenceCategory android:title="General">
+    <PreferenceCategory android:title="Seguridad">
 
-        <CheckBoxPreference
+        <PreferenceScreen
             android:defaultValue="true"
             android:key="pref_sync"
             android:summary="@string/sync_pref_summary"
             android:title="@string/sync_pref" />
 
-        <ListPreference
-            android:defaultValue="@string/pref_syncConnectionType_default_value"
-            android:dependency="pref_sync"
-            android:entries="@array/pref_syncConnectionType_entries"
-            android:entryValues="@array/pref_syncConnectionType_values"
-            android:key="pref_sync_connection_type"
-            android:summary="@string/pref_syncConnectionType_summary"
-            android:title="@string/pref_syncConnectionType" />
-
-        <Preference
+        <PreferenceScreen
             android:key="text_reset_notes"
             android:summary="Se restablecerán las notas de la última copia de seguridad"
-            android:title="Restablecer Notas" />
+            android:title="Restablecer Datos" />
 
         <PreferenceScreen
             android:key="pref_password"
             android:summary="Se restablecerá la contraseña de la cuenta"
-            android:title="Cambiar Contraseña">
-            <!--            <intent-->
-            <!--                android:action="android.intent.action.VIEW"-->
-            <!--                android:targetClass="com.example.projectnotes.activities.RegistryActivity"-->
-            <!--                android:targetPackage="com.example.projectnotes" />-->
-        </PreferenceScreen>
+            android:title="Cambiar Contraseña"/>
 
     </PreferenceCategory>
 
