--- a/app/src/main/res/layout/progress_dialog_save.xml
+++ b/app/src/main/res/layout/progress_dialog_save.xml
@@ -16,6 +16,7 @@
         <ProgressBar
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:indeterminate="true"
             android:indeterminateDrawable="@drawable/progressbar_gradient" />
 
         <TextView
