--- a/app/src/main/res/layout/activity_registry.xml
+++ b/app/src/main/res/layout/activity_registry.xml
@@ -117,7 +117,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="32dp"
         android:background="@drawable/button_round"
-        android:onClick="logIn"
+        android:onClick="singIn"
         android:text="@string/login"
         android:textColor="#FFFFFF"
         android:visibility="invisible"
